--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.14",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
+    "express": "^5.1.0",
     "framer-motion": "^10.15.2",
     "next": "13.4.16",
+    "postcss": "^8.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-scroll": "^1.8.9",
-    "react-slick": "^0.29.0"
+    "react-slick": "^0.29.0",
+    "tailwindcss": "^4.1.14"
   }
 }
